--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,16 @@
 {
-    "editor.formatOnSave": true,
-    "editor.rulers": [88],
-    "python.formatting.blackArgs": ["--line-length", "88"],
-    "python.formatting.provider": "black",
-    "python.linting.mypyEnabled": true,
-    "python.linting.enabled": true,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true
+  },
+  "editor.formatOnSave": true,
+  "editor.rulers": [88],
+  "isort.args": ["--profile", "black"],
+  "python.formatting.blackArgs": ["--line-length", "88"],
+  "python.formatting.provider": "black",
+  "python.linting.enabled": true,
+  "python.linting.mypyEnabled": true,
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
+  }
 }
