--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-absl-py==2.0.0
+absl-py==1.4.0
 annotated-types==0.6.0
+array-record==0.5.0
 astunparse==1.6.3
 beautifulsoup4==4.12.2
 black==23.11.0
@@ -11,20 +12,25 @@ click==8.1.7
 contourpy==1.2.0
 cycler==0.12.1
 distlib==0.3.7
+dm-tree==0.1.8
 docopt==0.6.2
+etils==1.5.2
 filelock==3.13.1
 flatbuffers==23.5.26
 fonttools==4.46.0
+fsspec==2023.12.1
 gast==0.5.4
 gcpds-image-segmentation @ git+https://github.com/UN-GCPDS/python-gcpds.image_segmentation.git@2263536d47a757e71ca0bc62127a1ec22943d762
 gdown==4.7.1
 google-auth==2.25.2
 google-auth-oauthlib==1.1.0
 google-pasta==0.2.0
+googleapis-common-protos==1.62.0
 grpcio==1.60.0
 h5py==3.10.0
 idna==3.6
 imageio==2.33.0
+importlib-resources==6.1.1
 isort==5.13.0
 joblib==1.3.2
 keras==2.15.0
@@ -50,7 +56,9 @@ pip-api==0.0.30
 pipreqs==0.4.13
 platformdirs==4.1.0
 plette==0.4.4
-protobuf==4.23.4
+promise==2.3
+protobuf==3.20.3
+psutil==5.9.6
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pydantic==2.5.2
@@ -70,11 +78,14 @@ soupsieve==2.5
 tensorboard==2.15.1
 tensorboard-data-server==0.7.2
 tensorflow==2.15.0.post1
+tensorflow-datasets==4.9.3
 tensorflow-estimator==2.15.0
 tensorflow-io-gcs-filesystem==0.34.0
+tensorflow-metadata==1.14.0
 termcolor==2.4.0
 threadpoolctl==3.2.0
 tifffile==2023.12.9
+toml==0.10.2
 tomlkit==0.12.3
 tqdm==4.66.1
 typing_extensions==4.9.0
@@ -82,3 +93,4 @@ urllib3==2.1.0
 Werkzeug==3.0.1
 wrapt==1.14.1
 yarg==0.1.9
+zipp==3.17.0
