feature: #1 initialized functional tests
- added functional tests for disturbance module
- added functional tests for oxford_pet module
- pylint setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,10 @@
   "python.formatting.provider": "black",
   "python.linting.enabled": true,
   "python.linting.mypyEnabled": true,
+  "python.linting.pylintEnabled": true,
+  "python.linting.pylintPath": ".env/bin/pylint",
+  "python.linting.mypyPath": ".env/bin/mypy",
+  "python.linting.mypyArgs": ["--config-file", "./mypy.ini"],
   "python.analysis.autoImportCompletions": true,
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
