--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==1.4.0
 annotated-types==0.6.0
 array-record==0.5.0
+astroid==3.0.1
 astunparse==1.6.3
 beautifulsoup4==4.12.2
 black==23.11.0
@@ -11,6 +12,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 contourpy==1.2.0
 cycler==0.12.1
+dill==0.3.7
 distlib==0.3.7
 dm-tree==0.1.8
 docopt==0.6.2
@@ -31,6 +33,7 @@ h5py==3.10.0
 idna==3.6
 imageio==2.33.0
 importlib-resources==6.1.1
+iniconfig==2.0.0
 isort==5.13.0
 joblib==1.3.2
 keras==2.15.0
@@ -40,6 +43,7 @@ libclang==16.0.6
 Markdown==3.5.1
 MarkupSafe==2.1.3
 matplotlib==3.8.2
+mccabe==0.7.0
 ml-dtypes==0.2.0
 mypy==1.7.1
 mypy-extensions==1.0.0
@@ -56,6 +60,7 @@ pip-api==0.0.30
 pipreqs==0.4.13
 platformdirs==4.1.0
 plette==0.4.4
+pluggy==1.3.0
 promise==2.3
 protobuf==3.20.3
 psutil==5.9.6
@@ -63,8 +68,10 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pydantic==2.5.2
 pydantic_core==2.14.5
+pylint==3.0.2
 pyparsing==3.1.1
 PySocks==1.7.1
+pytest==7.4.3
 python-dateutil==2.8.2
 requests==2.31.0
 requests-oauthlib==1.3.1
