--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -6,7 +6,7 @@ on:
       - "*"
 
 jobs:
-  test-core:
+  test:
     runs-on: ubuntu-22.04
     if: github.ref != 'refs/heads/master'
     strategy:
@@ -33,6 +33,28 @@ jobs:
         run: |
           cd core
           python -m pytest
+
+  lint:
+    runs-on: ubuntu-22.04
+    if: github.ref != 'refs/heads/master'
+    strategy:
+      matrix:
+        python-version: [3.11]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: "x64"
+
+      - name: Install dependencies
+        run: |
+          cd core
+          python -m pip install --upgrade pip
+          pip install -r src/requirements.txt
 
       - name: Run mypy
         run: |
