--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -12,6 +12,7 @@ Pygments==2.17.2
 requests==2.31.0
 snowballstemmer==2.2.0
 Sphinx==7.2.6
+sphinx-wagtail-theme==6.1.1
 sphinxcontrib-applehelp==1.0.7
 sphinxcontrib-devhelp==1.0.5
 sphinxcontrib-htmlhelp==2.0.4
