--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,3 +8,8 @@ build:
 
 sphinx:
   configuration: docs/source/conf.py
+
+python:
+  version: 3.11
+  install:
+    - requirements: docs/requirements.txt
