--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,15 +1,26 @@
 alabaster==0.7.13
+annotated-types==0.6.0
 Babel==2.13.1
 certifi==2023.11.17
 charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 docutils==0.20.1
 idna==3.6
 imagesize==1.4.1
 Jinja2==3.1.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+mdurl==0.1.2
 packaging==23.2
+pydantic==2.5.2
+pydantic_core==2.14.5
 Pygments==2.17.2
 requests==2.31.0
+rich==13.7.0
+rstcheck==6.2.0
+rstcheck-core==1.2.0
+shellingham==1.5.4
 snowballstemmer==2.2.0
 Sphinx==7.2.6
 sphinx-wagtail-theme==6.1.1
@@ -19,4 +30,6 @@ sphinxcontrib-htmlhelp==2.0.4
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.6
 sphinxcontrib-serializinghtml==1.1.9
+typer==0.9.0
+typing_extensions==4.9.0
 urllib3==2.1.0
