core\feat: #26 initialized mnist support
- initialized support for mnist
- added train module for training a simple unet segmentation model
  with mnist

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,9 @@
   "python.formatting.provider": "black",
   "python.linting.enabled": true,
   "python.linting.mypyEnabled": true,
-  "python.linting.pylintEnabled": true,
-  "python.linting.pylintPath": ".env/bin/pylint",
-  "python.linting.mypyPath": ".env/bin/mypy",
+  "python.linting.pylintEnabled": false,
+  "python.linting.pylintPath": "core/.env/bin/pylint",
+  "python.linting.mypyPath": "core/.env/bin/mypy",
   "python.linting.mypyArgs": ["--config-file", "./mypy.ini"],
   "python.analysis.autoImportCompletions": true,
   "[json]": {
