--- a/core/src/requirements.txt
+++ b/core/src/requirements.txt
@@ -2,6 +2,7 @@ absl-py==1.4.0
 annotated-types==0.6.0
 array-record==0.5.0
 astroid==3.0.1
+asttokens==2.4.1
 astunparse==1.6.3
 autopep8==2.0.4
 beautifulsoup4==4.12.2
@@ -11,13 +12,17 @@ Cerberus==1.3.5
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+comm==0.2.1
 contourpy==1.2.0
 cycler==0.12.1
+debugpy==1.8.0
+decorator==5.1.1
 dill==0.3.7
 distlib==0.3.7
 dm-tree==0.1.8
 docopt==0.6.2
 etils==1.5.2
+executing==2.0.1
 filelock==3.13.1
 flatbuffers==23.5.26
 fonttools==4.46.0
@@ -35,8 +40,13 @@ idna==3.6
 imageio==2.33.0
 importlib-resources==6.1.1
 iniconfig==2.0.0
+ipykernel==6.29.0
+ipython==8.20.0
 isort==5.13.0
+jedi==0.19.1
 joblib==1.3.2
+jupyter_client==8.6.0
+jupyter_core==5.7.1
 keras==2.15.0
 kiwisolver==1.4.5
 lazy_loader==0.3
@@ -44,10 +54,12 @@ libclang==16.0.6
 Markdown==3.5.1
 MarkupSafe==2.1.3
 matplotlib==3.8.2
+matplotlib-inline==0.1.6
 mccabe==0.7.0
 ml-dtypes==0.2.0
 mypy==1.7.1
 mypy-extensions==1.0.0
+nest-asyncio==1.6.0
 networkx==3.2.1
 numpy==1.26.2
 nvidia-cublas-cu12==12.2.5.6
@@ -66,8 +78,10 @@ oauthlib==3.2.2
 opencv-python==4.8.1.78
 opt-einsum==3.3.0
 packaging==23.2
+parso==0.8.3
 pathspec==0.12.0
 pep517==0.13.1
+pexpect==4.9.0
 Pillow==10.1.0
 pip-api==0.0.30
 pipreqs==0.4.13
@@ -75,18 +89,23 @@ platformdirs==4.1.0
 plette==0.4.4
 pluggy==1.3.0
 promise==2.3
+prompt-toolkit==3.0.43
 protobuf==3.20.3
 psutil==5.9.6
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycodestyle==2.11.1
 pydantic==2.5.2
 pydantic_core==2.14.5
+Pygments==2.17.2
 pylint==3.0.2
 pyparsing==3.1.1
 PySocks==1.7.1
 pytest==7.4.3
 python-dateutil==2.8.2
+pyzmq==25.1.2
 requests==2.31.0
 requests-oauthlib==1.3.1
 requirementslib==3.0.0
@@ -96,6 +115,7 @@ scikit-learn==1.3.2
 scipy==1.11.4
 six==1.16.0
 soupsieve==2.5
+stack-data==0.6.3
 tensorboard==2.15.1
 tensorboard-data-server==0.7.2
 tensorflow==2.15.0.post1
@@ -108,9 +128,12 @@ threadpoolctl==3.2.0
 tifffile==2023.12.9
 toml==0.10.2
 tomlkit==0.12.3
+tornado==6.4
 tqdm==4.66.1
+traitlets==5.14.1
 typing_extensions==4.9.0
 urllib3==2.1.0
+wcwidth==0.2.13
 Werkzeug==3.0.1
 wrapt==1.14.1
 yarg==0.1.9
