--- a/core/src/requirements.txt
+++ b/core/src/requirements.txt
@@ -9,14 +9,16 @@ beautifulsoup4==4.12.2
 black==23.11.0
 cachetools==5.3.2
 Cerberus==1.3.5
-certifi==2023.11.17
+certifi==2023.7.22
+chardet==4.0.0
 charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.1
 contourpy==1.2.0
-cycler==0.12.1
+cycler==0.10.0
 debugpy==1.8.0
 decorator==5.1.1
+defusedxml==0.7.1
 dill==0.3.7
 distlib==0.3.7
 dm-tree==0.1.8
@@ -36,7 +38,7 @@ google-pasta==0.2.0
 googleapis-common-protos==1.62.0
 grpcio==1.60.0
 h5py==3.10.0
-idna==3.6
+idna==2.10
 imageio==2.33.0
 importlib-resources==6.1.1
 iniconfig==2.0.0
@@ -76,8 +78,10 @@ nvidia-nccl-cu12==2.16.5
 nvidia-nvjitlink-cu12==12.2.140
 oauthlib==3.2.2
 opencv-python==4.8.1.78
+opencv-python-headless==4.8.0.74
 opt-einsum==3.3.0
 packaging==23.2
+pandas==2.2.0
 parso==0.8.3
 pathspec==0.12.0
 pep517==0.13.1
@@ -105,10 +109,16 @@ pyparsing==3.1.1
 PySocks==1.7.1
 pytest==7.4.3
 python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-magic==0.4.27
+pytz==2023.4
+PyYAML==6.0.1
 pyzmq==25.1.2
 requests==2.31.0
 requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
 requirementslib==3.0.0
+roboflow==1.1.17
 rsa==4.9
 scikit-image==0.22.0
 scikit-learn==1.3.2
@@ -116,6 +126,7 @@ scipy==1.11.4
 six==1.16.0
 soupsieve==2.5
 stack-data==0.6.3
+supervision==0.18.0
 tensorboard==2.15.1
 tensorboard-data-server==0.7.2
 tensorflow==2.15.0.post1
@@ -132,6 +143,7 @@ tornado==6.4
 tqdm==4.66.1
 traitlets==5.14.1
 typing_extensions==4.9.0
+tzdata==2023.4
 urllib3==2.1.0
 wcwidth==0.2.13
 Werkzeug==3.0.1
