--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,4 @@
 {
-  "editor.codeActionsOnSave": {
-    "source.organizeImports": true
-  },
   "editor.formatOnSave": true,
   "editor.rulers": [88],
   "isort.args": ["--profile", "black"],
@@ -9,10 +6,9 @@
   "python.formatting.provider": "black",
   "python.linting.enabled": true,
   "python.linting.mypyEnabled": true,
-  "python.linting.pylintEnabled": false,
+  "python.linting.pylintEnabled": true,
   "python.linting.pylintPath": "core/.env/bin/pylint",
   "python.linting.mypyPath": "core/.env/bin/mypy",
-  "python.linting.mypyArgs": ["--config-file", "./mypy.ini"],
   "python.analysis.autoImportCompletions": true,
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
