--- a/core/src/requirements.txt
+++ b/core/src/requirements.txt
@@ -98,6 +98,7 @@ protobuf==3.20.3
 psutil==5.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==15.0.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycodestyle==2.11.1
@@ -142,6 +143,9 @@ tomlkit==0.12.3
 tornado==6.4
 tqdm==4.66.1
 traitlets==5.14.1
+types-protobuf==4.25.0.20240410
+types-requests==2.31.0.20240406
+types-tensorflow==2.15.0.20240412
 typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.1.0
