--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,17 @@
 {
   "editor.formatOnSave": true,
   "editor.rulers": [88],
-  "isort.args": ["--profile", "black"],
-  "python.formatting.blackArgs": ["--line-length", "88"],
-  "python.formatting.provider": "black",
-  "python.linting.enabled": true,
-  "python.linting.mypyEnabled": true,
-  "python.linting.pylintEnabled": true,
-  "python.linting.pylintPath": "core/.env/bin/pylint",
-  "python.linting.mypyPath": "core/.env/bin/mypy",
   "python.analysis.autoImportCompletions": true,
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true
-  }
+  },
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": "explicit"
+    }
+  },
+  "isort.args": ["--profile", "black"]
 }
