core\feat: #40 re unify unet assembly
- reunited unet assembly functions as a single one
- added license
- removed wrong notebooks directory
- initialized project building setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
       "source.organizeImports": "explicit"
     }
   },
-  "isort.args": ["--profile", "black"]
+  "isort.args": ["--profile", "black"],
+  "isort.path": ["~/.env/python", "-m", "isort"]
 }
