--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -23,10 +23,12 @@ rstcheck-core==1.2.0
 shellingham==1.5.4
 snowballstemmer==2.2.0
 Sphinx==7.2.6
+sphinx-rtd-theme==2.0.0
 sphinx-wagtail-theme==6.1.1
 sphinxcontrib-applehelp==1.0.7
 sphinxcontrib-devhelp==1.0.5
 sphinxcontrib-htmlhelp==2.0.4
+sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.6
 sphinxcontrib-serializinghtml==1.1.9
