--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,7 @@
 alabaster==0.7.13
 annotated-types==0.6.0
 Babel==2.13.1
+black==24.4.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
@@ -12,7 +13,10 @@ Jinja2==3.1.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 mdurl==0.1.2
+mypy-extensions==1.0.0
 packaging==23.2
+pathspec==0.12.1
+platformdirs==4.2.0
 pydantic==2.5.2
 pydantic_core==2.14.5
 Pygments==2.17.2
@@ -20,6 +24,7 @@ requests==2.31.0
 rich==13.7.0
 rstcheck==6.2.0
 rstcheck-core==1.2.0
+rstfmt==0.0.14
 shellingham==1.5.4
 snowballstemmer==2.2.0
 Sphinx==7.2.6
