core\feat: #26 initialized mapping for crowd seg
- initialized mapping for crowd seg histopatology dataset

--- a/core/.pylintrc
+++ b/core/.pylintrc
@@ -1,3 +1,3 @@
 [MASTER]
-disable = missing-module-docstring,missing-function-docstring,missing-class-docstring
+disable = missing-module-docstring,missing-function-docstring,missing-class-docstring,redefined-outer-name
 init-hook='import sys; sys.path.append("core")'
