--- a/core/pytest.ini
+++ b/core/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
-pythonpath = src
+pythonpath = .
+markers = 
+    with_crowd_seg_data: marks test as one which requries downloading crowd seg data
