--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run pytest
         run: |
           cd core
-          python -m pytest
+          python -m pytest -m "not with_crowd_seg_data"
 
   lint-core:
     runs-on: ubuntu-22.04
