core\feat: poetry dependencies
- locked dependencies with poetry-
- increase mypy strictness
- type corrections across all submodules

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -70,12 +70,12 @@ jobs:
       - name: Run mypy
         run: |
           cd core
-          python -m mypy .
+          python -m mypy seg_tgce
 
       - name: Run pylint
         run: |
           cd core
-          python -m pylint .
+          python -m pylint seg_tgce
 
   lint-docs:
     runs-on: ubuntu-22.04
