--- a/core/.pylintrc
+++ b/core/.pylintrc
@@ -1,3 +1,4 @@
 [MASTER]
 disable = missing-module-docstring,missing-function-docstring,missing-class-docstring,redefined-outer-name
+ignored-modules = keras
 init-hook='import sys; sys.path.append("core")'
