--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -19,8 +19,8 @@ keras = "2.15.0"
 tensorflow = "2.15.1"
 matplotlib = "^3.8.4"
 opencv-python = "^4.9.0.80"
-gcpds-image-segmentation = { git = "https://github.com/UN-GCPDS/python-gcpds.image_segmentation" }
 tensorflow-datasets = "^4.9.4"
+gdown = "^5.2.0"
 
 
 [tool.poetry.group.test.dependencies]
