--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -1,6 +1,21 @@
+[project]
+description = "Framework for handling image segmentation in the context of multiple annotators"
+name = "seg_tgce"
+version = "0.1.0"
+readme = "README.md"
+authors = [{ name = "Brandon Lotero", email = "blotero@gmail.com" }]
+maintainers = [{ name = "Brandon Lotero", email = "blotero@gmail.com" }]
+license = { file = "../LICENSE" }
+
+[project.urls]
+Homepage = "https://github.com/blotero/seg_tgce"
+Documentation = "https://seg-tgce.readthedocs.io/en/latest/"
+Repository = "https://github.com/blotero/seg_tgce"
+Issues = "https://github.com/blotero/seg_tgce/issues"
+
 [tool.poetry]
 name = "seg_tgce"
-version = "0.0.1"
+version = "0.1.0"
 authors = ["Brandon Lotero <blotero@gmail.com>"]
 description = "A package for the SEG TGCE project"
 readme = "README.md"
