core\refac: #68 aws s3 fetching
- rely histology dataset downloading from aws s3 instead of google drive

--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 description = "Framework for handling image segmentation in the context of multiple annotators"
 name = "seg_tgce"
-version = "0.1.5"
+version = "0.1.5.dev1"
 readme = "README.md"
 authors = [{ name = "Brandon Lotero", email = "blotero@gmail.com" }]
 maintainers = [{ name = "Brandon Lotero", email = "blotero@gmail.com" }]
@@ -15,7 +15,7 @@ Issues = "https://github.com/blotero/seg_tgce/issues"
 
 [tool.poetry]
 name = "seg_tgce"
-version = "0.1.5"
+version = "0.1.5.dev1"
 authors = ["Brandon Lotero <blotero@gmail.com>"]
 description = "A package for the SEG TGCE project"
 readme = "README.md"
@@ -36,6 +36,7 @@ matplotlib = "^3.8.4"
 opencv-python = "^4.9.0.80"
 tensorflow-datasets = "^4.9.4"
 gdown = "4.6.3"
+boto3 = "^1.34.130"
 
 
 [tool.poetry.group.test.dependencies]
