--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -28,13 +28,13 @@ repository = "https://github.com/blotero/seg_tgce"
 
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.12"
+python = ">=3.11,<3.12"
 numpy = "^1.26.4"
 keras = "2.15.0"
 tensorflow = "2.15.1"
 matplotlib = "^3.8.4"
 opencv-python = "^4.9.0.80"
-tensorflow-datasets = "^4.9.4"
+tensorflow-datasets = "4.9.6"
 gdown = "4.6.3"
 boto3 = "^1.34.130"
 
