--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 description = "Framework for handling image segmentation in the context of multiple annotators"
 name = "seg_tgce"
-version = "0.2.0.dev3"
+version = "0.2.1.dev3"
 readme = "README.md"
 authors = [{ name = "Brandon Lotero", email = "blotero@gmail.com" }]
 maintainers = [{ name = "Brandon Lotero", email = "blotero@gmail.com" }]
@@ -15,7 +15,7 @@ Issues = "https://github.com/blotero/seg_tgce/issues"
 
 [tool.poetry]
 name = "seg_tgce"
-version = "0.2.0.dev3"
+version = "0.2.1.dev3"
 authors = ["Brandon Lotero <blotero@gmail.com>"]
 description = "A package for the SEG TGCE project"
 readme = "README.md"
@@ -29,7 +29,7 @@ repository = "https://github.com/blotero/seg_tgce"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
-numpy = "^1.26.4"
+numpy = "2.0.2"
 keras = "3.8.0"
 tensorflow = "2.18.0"
 matplotlib = "^3.8.4"
@@ -39,6 +39,7 @@ boto3 = "^1.34.130"
 pydot = "^3.0.4"
 keras-hub = "^0.20.0"
 keras-tuner = { extras = ["bayesian"], version = "^1.4.7" }
+simpleitk = "^2.5.0"
 
 
 [tool.poetry.group.test.dependencies]
