all\refac: #68 use tfds
- general refactor for preffering usage of tfds
- use ruff for formatting and linting
- update contribution docs

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -72,12 +72,13 @@ jobs:
       - name: Run mypy
         run: |
           cd core
-          poetry run mypy seg_tgce
+          poetry run mypy .
 
-      - name: Run pylint
+      - name: Run linter
         run: |
           cd core
-          poetry run pylint seg_tgce
+          poetry run ruff check .
+          poetry run ruff format --exit-non-zero-on-format .
 
   lint-docs:
     runs-on: ubuntu-22.04
