--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 description = "Framework for handling image segmentation in the context of multiple annotators"
 name = "seg_tgce"
-version = "0.2.2.dev1"
+version = "0.3.3.dev5"
 readme = "README.md"
 authors = [{ name = "Brandon Lotero", email = "blotero@gmail.com" }]
 maintainers = [{ name = "Brandon Lotero", email = "blotero@gmail.com" }]
@@ -15,7 +15,7 @@ Issues = "https://github.com/blotero/seg_tgce/issues"
 
 [tool.poetry]
 name = "seg_tgce"
-version = "0.2.2.dev1"
+version = "0.3.3.dev5"
 authors = ["Brandon Lotero <blotero@gmail.com>"]
 description = "A package for the SEG TGCE project"
 readme = "README.md"
@@ -40,6 +40,9 @@ pydot = "^3.0.4"
 keras-hub = "^0.20.0"
 keras-tuner = { extras = ["bayesian"], version = "^1.4.7" }
 simpleitk = "^2.5.0"
+albumentations = "^2.0.7"
+pandas = "^2.2.3"
+seaborn = "^0.13.2"
 
 
 [tool.poetry.group.test.dependencies]
@@ -47,10 +50,8 @@ pytest = "^8.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
+ruff = "^0.12.2"
 mypy = "^1.10.0"
-pylint = "^3.1.0"
-black = "^24.4.2"
-isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
