--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 description = "Framework for handling image segmentation in the context of multiple annotators"
 name = "seg_tgce"
-version = "0.3.4"
+version = "0.3.7"
 readme = "README.md"
 authors = [{ name = "Brandon Lotero", email = "blotero@gmail.com" }]
 maintainers = [{ name = "Brandon Lotero", email = "blotero@gmail.com" }]
@@ -15,7 +15,7 @@ Issues = "https://github.com/blotero/seg_tgce/issues"
 
 [tool.poetry]
 name = "seg_tgce"
-version = "0.3.4"
+version = "0.3.7"
 authors = ["Brandon Lotero <blotero@gmail.com>"]
 description = "A package for the SEG TGCE project"
 readme = "README.md"
@@ -44,6 +44,8 @@ albumentations = "^2.0.7"
 pandas = "^2.2.3"
 seaborn = "^0.13.2"
 optuna = "^4.4.0"
+plotly = "^6.2.0"
+kaleido = "^1.0.0"
 
 
 [tool.poetry.group.test.dependencies]
